[#15] 로그인, 회원가입 유효성 관련 로직 추가, 일부 패키지 변경